2015-07-30  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/*.c: removed references to <gnome.h>

	* src/main.c: replace usage of some gnome API by their Glib equivalent

	*src/toolbar.c: replaced GtkSignalFunc by GCallback

2011-10-31  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/journal.c: replaced GtkObject by GtkWidget in Gtk event
	callback declarations.
	(do_show_report): replaced GTK_SIGNAL_FUNC by G_CALLBACK in
	callback bindings
	(gtt_ghtml_resolve_path): use g_build_path and g_file_* instead of
	gnome_program_locate_file to test for the presence of report
	files.
	Use g_get_language_names instead of gnome_i18n_get_language_list
	to list of supported languages in the system.

2011-09-13  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/ghtml-deprecated.c,src/ghtml.c: included glib/gi18n.h for
	the definition 	of internationalization functions

	* src/util.c: Removed usage of gnome.h
	(gtt_glade_xml_new): replaced use of deprecated
	g_concat_dir_and_file by g_build_filename

2011-09-11  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/menucmd.c: Replaced gnome.h by glib/gi18n.h for the
	definition of the function '_'
	(about_box): Cast widget to GTK_WINDOW
	(new_project): Use GtkEntry instead of GnomeEntry

2011-08-17  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/idle-dialog.c: Replaced gnome.h by glib/gi18n.h for the
	definition of the function '_'
	(idle_timeout_func): Replaces gdk_x11_drawable_get_xid by
	gdk_x11_window_get_xid

	* src/err.c: Included missing stdlib.h header

	* src/gtt.h: Included missing glib.h header

2011-08-10  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/main.c (lock_gtt): Replaced usage of GnomeMessageBox by
	GtkMessageDialog

	* src/journal.c, src/idle-timer.c : replaced usage of gtk_timeout*
	by g_timeout_* 	and g_source_* for timeout handling

2011-08-09  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/export.c: Removed usage of gnome.h
